# shellout

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: builtins.c  builtins.h  completions.c  completions.h  execute.c  execute.h  main.c  pipeline.c  pipeline.h  utils.c  utils.h
